<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="user_icon">user_icon</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_to_continue">Sign to continue</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="register_success">Register Success!</string>
    <string name="title_activity_asdfdasf">asdfdasf</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="register_first">Register first</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="story_image">Story Image</string>
    <string name="enter_name">Enter name</string>
    <string name="name">Name</string>
    <string name="hello_name">Hi, Verry!</string>
    <string name="logout">logout</string>
    <string name="list_dicoding_stories">Below are the list of dicoding stories.</string>
    <string name="camera_failure">Can\'t start camera</string>
    <string name="permission_failure">Can\'t get permission</string>
    <string name="exit">Exit</string>
    <string name="story_title">Story Title</string>
    <string name="add_new_story">add new story</string>
    <string name="add_story_success">Successfully Add Story!</string>
    <string name="story_detail">Story Detail</string>
    <string name="back">Back</string>
    <string name="new_story">New Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="password_hint">Enter Password</string>
    <string name="password_least_than_8">Password must be at least 8 characters.</string>
    <string name="add_image_first">Please add an image first!</string>
    <string name="description">Description</string>
    <string name="enter_image_description">Enter Image Description</string>
    <string name="create_story">CREATE STORY</string>
    <string name="add_story">Add Story</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="google_maps">Google Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="something_wrong">Something went wrong!</string>
</resources>